<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginTop="@dimen/medium_margin"
    android:background="@drawable/bg_button_outlined_small">

    <FrameLayout
        android:id="@+id/cv_avatar"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:background="@drawable/bg_image_rounded_red"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/avatar_1"
            app:riv_oval="true" />

    </FrameLayout>

    <TextView
        android:id="@+id/username"
        style="@style/Text.Medium.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/kerry_dune"
        app:layout_constraintBottom_toTopOf="@+id/last_message"
        app:layout_constraintStart_toEndOf="@id/cv_avatar"
        app:layout_constraintTop_toTopOf="@+id/cv_avatar" />

    <TextView
        android:id="@+id/last_message"
        style="@style/Text.Regular.Small.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:ellipsize="end"
        android:lines="1"
        android:maxLength="20"
        android:text="@string/how_old_are_you"
        app:layout_constraintBottom_toBottomOf="@+id/cv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/Text.Regular.Small.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/page_margin"
        android:text="@string/_23_minutes_ago"
        app:layout_constraintBottom_toBottomOf="@+id/cv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_avatar"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>